Fixing it all up

--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f0efd7ea-aba9-4889-bd35-c1effbb64b33",
+   "id": "f6b51796-77dd-4e94-b744-ee60da08fc30",
    "metadata": {},
    "source": [
-    "# Duplicates\n",
+    "# Nulls\n",
     "\n",
-    "Exploring the repeating records with in the dataset."
+    "Exploring empty cells in the dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "347cae8c-4ecc-4048-8560-d5398e0789df",
+   "execution_count": 2,
+   "id": "5309d635-c241-4e02-b5c1-d54547f35c34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bf0d5141-7737-4189-834c-6a2ab5a57ce4",
+   "execution_count": 3,
+   "id": "36db7051-a69b-44c9-94f2-774db2cb5e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "bf22d02f-8d00-4d23-9f70-39334c79e628",
+   "execution_count": 4,
+   "id": "8e3281e7-3878-4bc0-92b8-8802148b5693",
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1c62bf91-5327-4ad4-82a7-1cf9dda51b70",
+   "execution_count": 5,
+   "id": "af1feff6-7352-4b25-b614-0ea28c83652a",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4  RavnAir Group, Corvus Airlines, Hageland Aviat...          AK  2020-09-30  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,48 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2c7979b6-9fb7-48c8-aa55-c3b7bb585073",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dupes_df = df[df.duplicated()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4e774c0b-ccea-463c-a30d-dc0f1d4b495a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1233 entries, 367 to 30680\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   hash_id      1233 non-null   object \n",
-      " 1   location     1233 non-null   object \n",
-      " 2   jobs         45 non-null     float64\n",
-      " 3   company      1233 non-null   object \n",
-      " 4   postal_code  1233 non-null   object \n",
-      " 5   date         1223 non-null   object \n",
-      "dtypes: float64(1), object(5)\n",
-      "memory usage: 67.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "dupes_df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fd57810b-3bc7-4c77-8ba2-ae4469b14ddb",
+   "execution_count": 7,
+   "id": "fe35165f-3a4f-4054-bb0c-e4c91f06afa9",
    "metadata": {},
    "outputs": [
     {
@@ -251,86 +211,190 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
        "      <td>AL</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>10</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>GA</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>IA</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>IN</td>\n",
-       "      <td>1</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>MD</td>\n",
+       "      <td>DC</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>DE</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>ID</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>IN</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>KS</td>\n",
+       "      <td>2078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>MD</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>ME</td>\n",
+       "      <td>348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>MT</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NJ</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NM</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>NY</td>\n",
+       "      <td>106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>OK</td>\n",
+       "      <td>765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>OR</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>RI</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>SD</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
        "      <td>TX</td>\n",
-       "      <td>1187</td>\n",
+       "      <td>7753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>UT</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>VT</td>\n",
+       "      <td>310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>WI</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  postal_code  total\n",
-       "0          AL      1\n",
-       "1          CA     31\n",
-       "2          CO     10\n",
-       "3          GA      1\n",
-       "4          IA      1\n",
-       "5          IN      1\n",
-       "6          MD      1\n",
-       "7          TX   1187"
+       "   postal_code  total\n",
+       "0           AK      2\n",
+       "1           AL      1\n",
+       "2           AZ    635\n",
+       "3           CA      2\n",
+       "4           CO     29\n",
+       "5           CT     17\n",
+       "6           DC      1\n",
+       "7           DE    100\n",
+       "8           ID     17\n",
+       "9           IN     32\n",
+       "10          KS   2078\n",
+       "11          MD     44\n",
+       "12          ME    348\n",
+       "13          MO      9\n",
+       "14          MT      2\n",
+       "15          NE    157\n",
+       "16          NJ     15\n",
+       "17          NM      3\n",
+       "18          NY    106\n",
+       "19          OK    765\n",
+       "20          OR     53\n",
+       "21          RI      6\n",
+       "22          SD      1\n",
+       "23          TX   7753\n",
+       "24          UT      1\n",
+       "25          VT    310\n",
+       "26          WI      2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dupes_df.groupby(\"postal_code\").size().rename(\"total\").reset_index()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "66248b25-535a-4409-a4bd-be6a741a430a",
-   "metadata": {},
-   "source": [
-    "Does the hashes works as a proxy for duplicates?"
+    "df[df.jobs.isnull()].groupby(\"postal_code\").size().rename(\"total\").reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f283fb9a-7ca5-44ac-b342-470e54749c73",
+   "execution_count": null,
+   "id": "47a4cf22-cf3b-4931-ad55-5ed30df1e341",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "assert len(df.hash_id.unique()) == len(df) - len(dupes_df) == len(df.drop_duplicates())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
