--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "5309d635-c241-4e02-b5c1-d54547f35c34",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "36db7051-a69b-44c9-94f2-774db2cb5e41",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "8e3281e7-3878-4bc0-92b8-8802148b5693",
    "metadata": {},
    "outputs": [
@@ -41,16 +41,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 38909 entries, 0 to 38908\n",
+      "RangeIndex: 39346 entries, 0 to 39345\n",
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      38909 non-null  object \n",
-      " 1   location     34697 non-null  object \n",
-      " 2   jobs         26420 non-null  float64\n",
-      " 3   company      38908 non-null  object \n",
-      " 4   postal_code  38909 non-null  object \n",
-      " 5   date         36414 non-null  object \n",
+      " 0   date         35824 non-null  object \n",
+      " 1   company      39346 non-null  object \n",
+      " 2   location     35188 non-null  object \n",
+      " 3   hash_id      39346 non-null  object \n",
+      " 4   jobs         38856 non-null  float64\n",
+      " 5   postal_code  39346 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
       "memory usage: 1.8+ MB\n"
      ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "af1feff6-7352-4b25-b614-0ea28c83652a",
    "metadata": {},
    "outputs": [
@@ -87,88 +87,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>location</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>company</th>\n",
-       "      <th>postal_code</th>\n",
        "      <th>date</th>\n",
+       "      <th>company</th>\n",
+       "      <th>location</th>\n",
+       "      <th>hash_id</th>\n",
+       "      <th>jobs</th>\n",
+       "      <th>postal_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>Bean’s Cafe</td>\n",
-       "      <td>AK</td>\n",
        "      <td>2021-09-16</td>\n",
+       "      <td>Bean’s Cafe</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>Prudhoe Bay</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>Kakivik Asset Mgmt</td>\n",
-       "      <td>AK</td>\n",
        "      <td>2021-07-02</td>\n",
+       "      <td>Kakivik Asset Mgmt</td>\n",
+       "      <td>Prudhoe Bay</td>\n",
+       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>First Student</td>\n",
-       "      <td>AK</td>\n",
        "      <td>2021-04-30</td>\n",
+       "      <td>First Student</td>\n",
+       "      <td>Fairbanks, North Pole</td>\n",
+       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>Anchorage</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>GCI Communication Group</td>\n",
-       "      <td>AK</td>\n",
        "      <td>2021-04-12</td>\n",
+       "      <td>GCI Communication Group</td>\n",
+       "      <td>Anchorage</td>\n",
+       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
-       "      <td>AK</td>\n",
        "      <td>2020-09-30</td>\n",
+       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
+       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
+       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...   \n",
+       "         date                                            company  \\\n",
+       "0  2021-09-16                                        Bean’s Cafe   \n",
+       "1  2021-07-02                                 Kakivik Asset Mgmt   \n",
+       "2  2021-04-30                                      First Student   \n",
+       "3  2021-04-12                            GCI Communication Group   \n",
+       "4  2020-09-30  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
        "\n",
-       "                                            location   jobs  \\\n",
-       "0                                          Anchorage   40.0   \n",
-       "1                                        Prudhoe Bay  134.0   \n",
-       "2                              Fairbanks, North Pole  185.0   \n",
-       "3                                          Anchorage   59.0   \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...    NaN   \n",
+       "                                            location  \\\n",
+       "0                                          Anchorage   \n",
+       "1                                        Prudhoe Bay   \n",
+       "2                              Fairbanks, North Pole   \n",
+       "3                                          Anchorage   \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...   \n",
        "\n",
-       "                                             company postal_code        date  \n",
-       "0                                        Bean’s Cafe          AK  2021-09-16  \n",
-       "1                                 Kakivik Asset Mgmt          AK  2021-07-02  \n",
-       "2                                      First Student          AK  2021-04-30  \n",
-       "3                            GCI Communication Group          AK  2021-04-12  \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...          AK  2020-09-30  "
+       "                                             hash_id   jobs postal_code  \n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   40.0          AK  \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...  134.0          AK  \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...  185.0          AK  \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   59.0          AK  \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...    NaN          AK  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "fe35165f-3a4f-4054-bb0c-e4c91f06afa9",
    "metadata": {},
    "outputs": [
@@ -221,126 +221,91 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AZ</td>\n",
-       "      <td>635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>CA</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CO</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>CT</td>\n",
-       "      <td>17</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>DC</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>DE</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>5</th>\n",
        "      <td>ID</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>6</th>\n",
        "      <td>IN</td>\n",
        "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>KS</td>\n",
-       "      <td>2078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>7</th>\n",
        "      <td>MD</td>\n",
        "      <td>44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>ME</td>\n",
-       "      <td>348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>8</th>\n",
        "      <td>MO</td>\n",
-       "      <td>9</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>9</th>\n",
        "      <td>MT</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>10</th>\n",
        "      <td>NE</td>\n",
        "      <td>157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>11</th>\n",
        "      <td>NJ</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>12</th>\n",
        "      <td>NM</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>13</th>\n",
        "      <td>NY</td>\n",
        "      <td>106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>OK</td>\n",
-       "      <td>765</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>14</th>\n",
        "      <td>OR</td>\n",
-       "      <td>53</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>15</th>\n",
        "      <td>RI</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
+       "      <th>16</th>\n",
        "      <td>SD</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
+       "      <th>17</th>\n",
        "      <td>TX</td>\n",
-       "      <td>7753</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
+       "      <th>18</th>\n",
        "      <td>UT</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>VT</td>\n",
-       "      <td>310</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>19</th>\n",
        "      <td>WI</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -352,34 +317,27 @@
        "   postal_code  total\n",
        "0           AK      2\n",
        "1           AL      1\n",
-       "2           AZ    635\n",
-       "3           CA      2\n",
-       "4           CO     29\n",
-       "5           CT     17\n",
-       "6           DC      1\n",
-       "7           DE    100\n",
-       "8           ID     17\n",
-       "9           IN     32\n",
-       "10          KS   2078\n",
-       "11          MD     44\n",
-       "12          ME    348\n",
-       "13          MO      9\n",
-       "14          MT      2\n",
-       "15          NE    157\n",
-       "16          NJ     15\n",
-       "17          NM      3\n",
-       "18          NY    106\n",
-       "19          OK    765\n",
-       "20          OR     53\n",
-       "21          RI      6\n",
-       "22          SD      1\n",
-       "23          TX   7753\n",
-       "24          UT      1\n",
-       "25          VT    310\n",
-       "26          WI      2"
+       "2           CA      2\n",
+       "3           CT     28\n",
+       "4           DC      1\n",
+       "5           ID     17\n",
+       "6           IN     32\n",
+       "7           MD     44\n",
+       "8           MO     10\n",
+       "9           MT      2\n",
+       "10          NE    157\n",
+       "11          NJ     15\n",
+       "12          NM      3\n",
+       "13          NY    106\n",
+       "14          OR     34\n",
+       "15          RI      6\n",
+       "16          SD      1\n",
+       "17          TX     26\n",
+       "18          UT      1\n",
+       "19          WI      2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,14 +345,6 @@
    "source": [
     "df[df.jobs.isnull()].groupby(\"postal_code\").size().rename(\"total\").reset_index()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47a4cf22-cf3b-4931-ad55-5ed30df1e341",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
