--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5309d635-c241-4e02-b5c1-d54547f35c34",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "36db7051-a69b-44c9-94f2-774db2cb5e41",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8e3281e7-3878-4bc0-92b8-8802148b5693",
    "metadata": {},
    "outputs": [
@@ -45,11 +45,11 @@
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   date         35824 non-null  object \n",
-      " 1   company      39346 non-null  object \n",
-      " 2   location     35188 non-null  object \n",
-      " 3   hash_id      39346 non-null  object \n",
-      " 4   jobs         38856 non-null  float64\n",
+      " 0   hash_id      39346 non-null  object \n",
+      " 1   jobs         38856 non-null  float64\n",
+      " 2   date         39340 non-null  object \n",
+      " 3   company      39346 non-null  object \n",
+      " 4   location     35188 non-null  object \n",
       " 5   postal_code  39346 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
       "memory usage: 1.8+ MB\n"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "af1feff6-7352-4b25-b614-0ea28c83652a",
    "metadata": {},
    "outputs": [
@@ -87,58 +87,58 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>hash_id</th>\n",
+       "      <th>jobs</th>\n",
        "      <th>date</th>\n",
        "      <th>company</th>\n",
        "      <th>location</th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>jobs</th>\n",
        "      <th>postal_code</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>2021-09-16</td>\n",
        "      <td>Bean’s Cafe</td>\n",
        "      <td>Anchorage</td>\n",
-       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>40.0</td>\n",
        "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
+       "      <td>134.0</td>\n",
        "      <td>2021-07-02</td>\n",
        "      <td>Kakivik Asset Mgmt</td>\n",
        "      <td>Prudhoe Bay</td>\n",
-       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>134.0</td>\n",
        "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
+       "      <td>185.0</td>\n",
        "      <td>2021-04-30</td>\n",
        "      <td>First Student</td>\n",
        "      <td>Fairbanks, North Pole</td>\n",
-       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>185.0</td>\n",
        "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
+       "      <td>59.0</td>\n",
        "      <td>2021-04-12</td>\n",
        "      <td>GCI Communication Group</td>\n",
        "      <td>Anchorage</td>\n",
-       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>59.0</td>\n",
        "      <td>AK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2020-09-30</td>\n",
        "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
        "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
-       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>AK</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -146,29 +146,29 @@
        "</div>"
       ],
       "text/plain": [
-       "         date                                            company  \\\n",
-       "0  2021-09-16                                        Bean’s Cafe   \n",
-       "1  2021-07-02                                 Kakivik Asset Mgmt   \n",
-       "2  2021-04-30                                      First Student   \n",
-       "3  2021-04-12                            GCI Communication Group   \n",
-       "4  2020-09-30  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
+       "                                             hash_id   jobs        date  \\\n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   40.0  2021-09-16   \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...  134.0  2021-07-02   \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...  185.0  2021-04-30   \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   59.0  2021-04-12   \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...    NaN  2020-09-30   \n",
        "\n",
-       "                                            location  \\\n",
-       "0                                          Anchorage   \n",
-       "1                                        Prudhoe Bay   \n",
-       "2                              Fairbanks, North Pole   \n",
-       "3                                          Anchorage   \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...   \n",
+       "                                             company  \\\n",
+       "0                                        Bean’s Cafe   \n",
+       "1                                 Kakivik Asset Mgmt   \n",
+       "2                                      First Student   \n",
+       "3                            GCI Communication Group   \n",
+       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
        "\n",
-       "                                             hash_id   jobs postal_code  \n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   40.0          AK  \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...  134.0          AK  \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...  185.0          AK  \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   59.0          AK  \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...    NaN          AK  "
+       "                                            location postal_code  \n",
+       "0                                          Anchorage          AK  \n",
+       "1                                        Prudhoe Bay          AK  \n",
+       "2                              Fairbanks, North Pole          AK  \n",
+       "3                                          Anchorage          AK  \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...          AK  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1c2809bd-77f1-407e-8854-f6647a1772e6",
    "metadata": {},
    "outputs": [
@@ -219,43 +219,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>CT</td>\n",
-       "      <td>346</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>FL</td>\n",
-       "      <td>1873</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>MO</td>\n",
-       "      <td>354</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>NJ</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NM</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>1</th>\n",
        "      <td>RI</td>\n",
        "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>UT</td>\n",
-       "      <td>203</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>WI</td>\n",
-       "      <td>665</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -263,17 +233,11 @@
       ],
       "text/plain": [
        "  postal_code  total\n",
-       "0          CT    346\n",
-       "1          FL   1873\n",
-       "2          MO    354\n",
-       "3          NJ      3\n",
-       "4          NM     75\n",
-       "5          RI      3\n",
-       "6          UT    203\n",
-       "7          WI    665"
+       "0          NJ      3\n",
+       "1          RI      3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "0850b407-4234-479c-8b84-729ef124a457",
    "metadata": {},
    "outputs": [
@@ -332,7 +296,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ff87e812-e28f-4df0-8f6d-bac36910c54c",
    "metadata": {},
    "outputs": [
@@ -503,7 +467,7 @@
        "18          WI      1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
