--- a/_notebooks/nulls.ipynb
+++ b/_notebooks/nulls.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "5309d635-c241-4e02-b5c1-d54547f35c34",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "36db7051-a69b-44c9-94f2-774db2cb5e41",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "8e3281e7-3878-4bc0-92b8-8802148b5693",
    "metadata": {},
    "outputs": [
@@ -45,12 +45,12 @@
       "Data columns (total 6 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   hash_id      39346 non-null  object \n",
-      " 1   jobs         38856 non-null  float64\n",
-      " 2   date         39340 non-null  object \n",
-      " 3   company      39346 non-null  object \n",
-      " 4   location     35188 non-null  object \n",
-      " 5   postal_code  39346 non-null  object \n",
+      " 0   postal_code  39346 non-null  object \n",
+      " 1   company      39346 non-null  object \n",
+      " 2   jobs         38856 non-null  float64\n",
+      " 3   hash_id      39346 non-null  object \n",
+      " 4   date         39340 non-null  object \n",
+      " 5   location     37804 non-null  object \n",
       "dtypes: float64(1), object(5)\n",
       "memory usage: 1.8+ MB\n"
      ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "af1feff6-7352-4b25-b614-0ea28c83652a",
    "metadata": {},
    "outputs": [
@@ -87,88 +87,88 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>hash_id</th>\n",
-       "      <th>jobs</th>\n",
-       "      <th>date</th>\n",
-       "      <th>company</th>\n",
-       "      <th>location</th>\n",
        "      <th>postal_code</th>\n",
+       "      <th>company</th>\n",
+       "      <th>jobs</th>\n",
+       "      <th>hash_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>location</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>2021-09-16</td>\n",
-       "      <td>Bean’s Cafe</td>\n",
-       "      <td>Anchorage</td>\n",
        "      <td>AK</td>\n",
+       "      <td>Bean’s Cafe</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...</td>\n",
+       "      <td>2021-09-16</td>\n",
+       "      <td>Anchorage</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
-       "      <td>134.0</td>\n",
-       "      <td>2021-07-02</td>\n",
-       "      <td>Kakivik Asset Mgmt</td>\n",
-       "      <td>Prudhoe Bay</td>\n",
        "      <td>AK</td>\n",
+       "      <td>Kakivik Asset Mgmt</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...</td>\n",
+       "      <td>2021-07-02</td>\n",
+       "      <td>Prudhoe Bay</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
-       "      <td>185.0</td>\n",
-       "      <td>2021-04-30</td>\n",
-       "      <td>First Student</td>\n",
-       "      <td>Fairbanks, North Pole</td>\n",
        "      <td>AK</td>\n",
+       "      <td>First Student</td>\n",
+       "      <td>185.0</td>\n",
+       "      <td>20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...</td>\n",
+       "      <td>2021-04-30</td>\n",
+       "      <td>Fairbanks, North Pole</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>2021-04-12</td>\n",
-       "      <td>GCI Communication Group</td>\n",
-       "      <td>Anchorage</td>\n",
        "      <td>AK</td>\n",
+       "      <td>GCI Communication Group</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...</td>\n",
+       "      <td>2021-04-12</td>\n",
+       "      <td>Anchorage</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2020-09-30</td>\n",
-       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
-       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
        "      <td>AK</td>\n",
+       "      <td>RavnAir Group, Corvus Airlines, Hageland Aviat...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...</td>\n",
+       "      <td>2020-09-30</td>\n",
+       "      <td>Anchorage and 20 smaller Alaska communities, p...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             hash_id   jobs        date  \\\n",
-       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...   40.0  2021-09-16   \n",
-       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...  134.0  2021-07-02   \n",
-       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...  185.0  2021-04-30   \n",
-       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...   59.0  2021-04-12   \n",
-       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...    NaN  2020-09-30   \n",
+       "  postal_code                                            company   jobs  \\\n",
+       "0          AK                                        Bean’s Cafe   40.0   \n",
+       "1          AK                                 Kakivik Asset Mgmt  134.0   \n",
+       "2          AK                                      First Student  185.0   \n",
+       "3          AK                            GCI Communication Group   59.0   \n",
+       "4          AK  RavnAir Group, Corvus Airlines, Hageland Aviat...    NaN   \n",
        "\n",
-       "                                             company  \\\n",
-       "0                                        Bean’s Cafe   \n",
-       "1                                 Kakivik Asset Mgmt   \n",
-       "2                                      First Student   \n",
-       "3                            GCI Communication Group   \n",
-       "4  RavnAir Group, Corvus Airlines, Hageland Aviat...   \n",
+       "                                             hash_id        date  \\\n",
+       "0  b855422a87ece9da20ec6571e2f8f6f48521d4e06610e5...  2021-09-16   \n",
+       "1  2214cbc57e63037a436152aeb018819a5e8777e2e8eab1...  2021-07-02   \n",
+       "2  20c76d62449eb697b6f95288b8982e36586afd99fc7b7c...  2021-04-30   \n",
+       "3  0ca0a89d9a684741de7f5199ef69ffc948b5df7e93e22c...  2021-04-12   \n",
+       "4  b7c5bb7e614fcce37f1f8c7ba00786faa5482270039b5c...  2020-09-30   \n",
        "\n",
-       "                                            location postal_code  \n",
-       "0                                          Anchorage          AK  \n",
-       "1                                        Prudhoe Bay          AK  \n",
-       "2                              Fairbanks, North Pole          AK  \n",
-       "3                                          Anchorage          AK  \n",
-       "4  Anchorage and 20 smaller Alaska communities, p...          AK  "
+       "                                            location  \n",
+       "0                                          Anchorage  \n",
+       "1                                        Prudhoe Bay  \n",
+       "2                              Fairbanks, North Pole  \n",
+       "3                                          Anchorage  \n",
+       "4  Anchorage and 20 smaller Alaska communities, p...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "1c2809bd-77f1-407e-8854-f6647a1772e6",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
        "1          RI      3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "0850b407-4234-479c-8b84-729ef124a457",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "id": "ff87e812-e28f-4df0-8f6d-bac36910c54c",
    "metadata": {},
    "outputs": [
@@ -353,90 +353,80 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AZ</td>\n",
-       "      <td>172</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>CA</td>\n",
-       "      <td>370</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DC</td>\n",
-       "      <td>70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>DE</td>\n",
        "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>GA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>KS</td>\n",
-       "      <td>2026</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>MD</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>ME</td>\n",
        "      <td>297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>7</th>\n",
        "      <td>MO</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>8</th>\n",
        "      <td>NE</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>9</th>\n",
        "      <td>NY</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>10</th>\n",
        "      <td>OK</td>\n",
        "      <td>743</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>11</th>\n",
        "      <td>OR</td>\n",
        "      <td>54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>12</th>\n",
        "      <td>TX</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>13</th>\n",
        "      <td>VA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>14</th>\n",
        "      <td>VT</td>\n",
        "      <td>288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>15</th>\n",
        "      <td>WA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>16</th>\n",
        "      <td>WI</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -447,27 +437,25 @@
       "text/plain": [
        "   postal_code  total\n",
        "0           AL      4\n",
-       "1           AZ    172\n",
-       "2           CA    370\n",
-       "3           DC     70\n",
-       "4           DE     92\n",
-       "5           GA      1\n",
-       "6           KS   2026\n",
-       "7           MD      1\n",
-       "8           ME    297\n",
-       "9           MO      1\n",
-       "10          NE      8\n",
-       "11          NY     18\n",
-       "12          OK    743\n",
-       "13          OR     54\n",
-       "14          TX     10\n",
-       "15          VA      1\n",
-       "16          VT    288\n",
-       "17          WA      1\n",
-       "18          WI      1"
+       "1           AZ     20\n",
+       "2           DE     92\n",
+       "3           GA      1\n",
+       "4           KS      2\n",
+       "5           MD      1\n",
+       "6           ME    297\n",
+       "7           MO      1\n",
+       "8           NE      8\n",
+       "9           NY     18\n",
+       "10          OK    743\n",
+       "11          OR     54\n",
+       "12          TX     10\n",
+       "13          VA      1\n",
+       "14          VT    288\n",
+       "15          WA      1\n",
+       "16          WI      1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "id": "fe35165f-3a4f-4054-bb0c-e4c91f06afa9",
    "metadata": {},
    "outputs": [
@@ -644,7 +632,7 @@
        "19          WI      2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
